PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/O_Project__c.object-meta.xml
<CustomObject>
    <description>외주인력 투입프로젝트</description>
    <label>외주 프로젝트</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>외주 프로젝트</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>