PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/Monthly_price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_price__c</fullName>
    <label>단가</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>