PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/O_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>O_Contract_Amount__c</fullName>
    <label>계약금액</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>