PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/O_Name__c.field-meta.xml
<CustomField>
    <fullName>O_Name__c</fullName>
    <formula>O_Resource__r.O_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>이름</label>
    <type>Text</type>
</CustomField>