PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/O_PROJECT__c.field-meta.xml
<CustomField>
    <fullName>O_PROJECT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>프로젝트</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>외주 프로젝트</relationshipLabel>
    <relationshipName>O_PROJECT_R</relationshipName>
    <type>Lookup</type>
</CustomField>