PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/O_PROJECT_END__c.field-meta.xml
<CustomField>
    <fullName>O_PROJECT_END__c</fullName>
    <label>철수 일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>