PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/O_project_Period__c.field-meta.xml
<CustomField>
    <fullName>O_project_Period__c</fullName>
    <formula>(TEXT(YEAR(O_project_start__c ))&amp; &quot;-&quot; &amp; TEXT(MONTH(O_project_start__c )) &amp;&quot;-&quot; &amp; TEXT(DAY(O_project_start__c )) &amp; &quot; ~ &quot; &amp;
TEXT(YEAR(O_PROJECT_END__c ))&amp; &quot;-&quot; &amp; TEXT(MONTH(O_PROJECT_END__c )) &amp;&quot;-&quot; &amp; TEXT(DAY(O_PROJECT_END__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수행기간</label>
    <type>Text</type>
</CustomField>