PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/O_project_start__c.field-meta.xml
<CustomField>
    <fullName>O_project_start__c</fullName>
    <label>투입 일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>