PA_Education/TestMenifest/force-app/main/default/objects/O_Project__c/fields/O_Resource__c.field-meta.xml
<CustomField>
    <fullName>O_Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>투입인력</description>
    <label>외주인력</label>
    <referenceTo>Outsourcing__c</referenceTo>
    <relationshipLabel>외주 프로젝트</relationshipLabel>
    <relationshipName>O_Resource_R</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>